Added in 1.0.8:

- Tracking (view only) wallets
- Private keys
- Change password option
- Remote daemon option
- Determistic wallets
- Mnemonic seeds
- Import GUI key

To add:

- Ability to ignore peers that aren't running a supported version
- Fix 191997 bug
- Diff overhead fix
- Payment gate enhancement
- Multi sign
- Check payment
- Import from CSV