@@ -7,6 +7,7 @@ Added in 1.0.8:
 - Determistic wallets
 - Mnemonic seeds
 - Import GUI key
+- Add searchby payment ID
 
 To add:
 
